--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ function cekData(){
   .catch(error=>{
     document.getElementById("loading").innerHTML = "";
     document.getElementById("result").innerHTML =
-      "<div class='error'>Terjadi kesalahan sistem</div>";
+      "<div class='error'>Data Tidak DItemukan</div>";
   });
 }
 
