--- a/index.html
+++ b/index.html
@@ -121,11 +121,11 @@ button:hover{
   <h2>🔎 Cek Sertifikat KP</h2>
 
   <div class="input-group">
-    <input type="text" id="nama" placeholder="Masukkan Nama Lengkap">
+    <input type="text" autocomplete="off" id="nama" placeholder="Masukkan Nama Lengkap">
   </div>
 
   <div class="input-group">
-    <input type="text" id="nim" placeholder="Masukkan NIM">
+    <input type="text" autocomplete="off" id="nim" placeholder="Masukkan NIM">
   </div>
 
   <button onclick="cekData()">Cek Sertifikat</button>
